# trends-collector

./: .gitignore  Makefile  README.md  RESEND_GUIDE.md  VPS_B_CHEATSHEET.md  VPS操作速查备忘手册.md  config.yaml  deploy.sh  pyproject.toml  trends-collector-email-relay.service  trends-collector-receiver.service
scripts/: china_relay_collector.py
src/trends_collector/: __init__.py  config.py  email_relay.py  main.py  notifier.py  receiver.py  report.py  storage.py  translator.py
src/trends_collector/collectors/: __init__.py  base.py  github.py  google_trends.py  hackernews.py  reddit.py  wikipedia.py  youtube.py
tests/: test_notifier.py
