[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trends-collector"
version = "1.0.0"
description = "Multi-source trending topics collector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
